After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743142 - glimagesink memleak
glimagesink memleak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-18 20:09 UTC by Nicola
Modified: 2015-01-19 05:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix memleak (927 bytes, patch)
2015-01-18 20:09 UTC, Nicola
committed Details | Review

Description Nicola 2015-01-18 20:09:40 UTC
Created attachment 294812 [details] [review]
fix memleak

fix memleak
Comment 1 Matthew Waters (ystreet00) 2015-01-19 05:48:46 UTC
commit 907e02cfa9ea9b5772b35df01b42ad1b203452c6
Author: Nicola Murino <nicola.murino@gmail.com>
Date:   Sun Jan 18 21:05:44 2015 +0100

    glimagesink: fix memleak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=743142