glimagesink: fix memleak

https://bugzilla.gnome.org/show_bug.cgi?id=743142